# libpqc-dyber

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmarks.yml  ci.yml  release.yml  security.yml
bindings/asm_binding/: README.md
bindings/cpp/: CMakeLists.txt
bindings/cpp/include/pqc/: algorithm.hpp  bytes.hpp  error.hpp  kem.hpp  pqc.hpp  sig.hpp
bindings/cpp/tests/: bench_cpp.cpp  test_kem.cpp  test_sig.cpp
bindings/csharp/: PqcDyber.csproj
bindings/csharp/benchmarks/: Benchmark.cs
bindings/csharp/src/: Algorithm.cs  KEM.cs  NativeMethods.cs  Signature.cs
bindings/csharp/tests/: PqcDyber.Tests.csproj
bindings/dart/: pubspec.yaml
bindings/dart/benchmark/: bench.dart
bindings/dart/lib/: pqc_dyber.dart
bindings/dart/lib/src/: bindings.dart  kem.dart  signature.dart
bindings/go/: bench_test.go  go.mod  hybrid.go  kem.go  pqc.go  pqc_test.go  sig.go
bindings/java/: build.gradle  pom.xml
bindings/javascript/: binding.gyp  package.json
bindings/javascript/benchmarks/: bench.js
bindings/javascript/lib/: index.js  kem.js  sig.js
bindings/javascript/src/: addon.c
bindings/kotlin/: build.gradle.kts
bindings/matlab/+pqc/: kem.m  sig.m
bindings/matlab/benchmarks/: bench_pqc.m
bindings/matlab/mex/: build_mex.m  pqc_mex.c
bindings/perl/: Makefile.PL
bindings/perl/benchmarks/: bench.pl
bindings/perl/xs/: Dyber.xs
bindings/php/: composer.json
bindings/php/benchmarks/: bench.php
bindings/php/src/: KEM.php  PQC.php  Signature.php
bindings/python/: pyproject.toml
bindings/python/benchmarks/: bench.py
bindings/python/src/pqc_dyber/: __init__.py  _ffi.py  algorithms.py  exceptions.py  kem.py  sig.py
bindings/python/tests/: test_kem.py  test_sig.py
bindings/r/: DESCRIPTION  NAMESPACE
bindings/r/R/: pqc.R
bindings/r/benchmarks/: bench.R
bindings/r/src/: init.c  pqc_r.c
bindings/ruby/: pqc-dyber.gemspec
bindings/ruby/benchmarks/: bench.rb
bindings/ruby/lib/: pqc_dyber.rb
bindings/ruby/lib/pqc_dyber/: kem.rb  signature.rb
bindings/rust/: Cargo.toml  build.rs
bindings/rust/benches/: bench_pqc.rs
bindings/rust/src/: error.rs  ffi.rs  hybrid.rs  kem.rs  lib.rs  sig.rs
bindings/rust/tests/: test_kem.rs  test_sig.rs
bindings/scala/: build.sbt
bindings/shell/: pqc_cli.c
bindings/shell/benchmarks/: bench.sh
bindings/swift/: Package.swift
bindings/swift/Sources/PQCDyber/: KEM.swift  PQCDyber.swift  Signature.swift
bindings/swift/Tests/: Benchmarks.swift
bindings/typescript/: package.json
bindings/typescript/src/: index.ts
build-asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  pqc-cli
build-asan/include/pqc/: pqc_config.h
build-asan/tests/: CTestTestfile.cmake  Makefile  test_fndsa_quick  test_hash  test_integration  test_kem  test_sig
build-wsl/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  pqc-cli
build-wsl/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_fndsa_quick  test_hash  test_integration  test_kem  test_sig
cmake/: CompilerFlags.cmake  FindPlatform.cmake  FindSIMD.cmake  pqc_config.h.in
docs/: architecture.md
docs/algorithms/: fn-dsa.md  ml-dsa.md  ml-kem.md  slh-dsa.md
docs/api/: Doxyfile
docs/guides/: getting-started-c.md  getting-started-python.md
include/pqc/: algorithms.h  common.h  export.h  hybrid.h  kem.h  pqc.h  rand.h  sig.h
integrations/boringssl/: CMakeLists.txt  README.md
integrations/boringssl/src/: pqc_boringssl.c  pqc_boringssl.h  pqc_boringssl_internal.h  pqc_boringssl_kem.c  pqc_boringssl_sig.c
integrations/boringssl/tests/: test_boringssl.c
integrations/openssl/: CMakeLists.txt  README.md  openssl.cnf.example
integrations/openssl/src/: pqc_kem_prov.c  pqc_keymgmt_prov.c  pqc_provider.c  pqc_provider.h  pqc_sig_prov.c  pqc_tls_groups.c
integrations/openssl/tests/: test_openssl_provider.c
integrations/tls/: CMakeLists.txt  README.md
integrations/tls/src/: pqc_tls.c  pqc_tls.h  pqc_tls12.c  pqc_tls_groups.c  pqc_tls_internal.h  pqc_tls_sigalgs.c
integrations/tls/tests/: test_tls_keyshare.c
src/core/common/: ct_ops.c  ct_ops.h  error.c  mem.c  mem_internal.h  platform.c  platform.h  rand.c  rand_internal.h
src/core/common/hash/: keccak.c  keccak.h  sha2.c  sha2.h  sha3.c  sha3.h
src/core/hybrid/: ecdh_p256.c  ecdh_p256.h  ecdsa_p256.c  ecdsa_p256.h  ed25519.c  ed25519.h  field25519.c  field25519.h  field_p256.c  field_p256.h  hybrid_kem.c  hybrid_sig.c  x25519.c  x25519.h
src/core/kem/: kem.c  kem_internal.h
src/core/kem/bike/: bike.c  bike.h  bike_params.h  decode.c  gf2x.c  sampling.c
src/core/kem/frodo/: frodo.c  frodo.h  frodo_params.h  matrix.c  noise.c  pack.c
src/core/kem/hqc/: code.c  gf.c  hqc.c  hqc.h  hqc_params.h  parsing.c  reed_muller.c  reed_solomon.c
src/core/kem/mceliece/: benes.c  controlbits.c  decrypt.c  encrypt.c  gf.c  goppa.c  mceliece.c  mceliece.h  mceliece_params.h  root.c
src/core/kem/mlkem/: cbd.c  cbd.h  indcpa.c  indcpa.h  mlkem.c  mlkem.h  mlkem_params.h  ntt.c  ntt.h  poly.c  poly.h  polyvec.c  polyvec.h  reduce.c  reduce.h  verify.c  verify.h
src/core/kem/ntru/: ntru.c  ntru.h  ntru_params.h  owcpa.c  pack.c  poly.c  sample.c
src/core/kem/ntruprime/: encode.c  ntruprime.c  ntruprime.h  ntruprime_params.h  r3.c  rq.c
src/core/sig/: sig.c  sig_internal.h
src/core/sig/cross/: cross.c  cross.h  cross_params.h  merkle.c  rsdp.c  seed_tree.c
src/core/sig/fndsa/: codec.c  fft.c  fft.h  fndsa.c  fndsa.h  fndsa_params.h  keygen.c  ntru_solve.c  sampler.c  sign.c  vrfy.c
src/core/sig/lms/: hss.c  lmots.c  lms.c  (+2 more)
src/dispatch/: dispatch.c  dispatch.h
tests/: CMakeLists.txt
tests/bench/: bench_all.c  bench_common.h  bench_hash.c  bench_kem.c  bench_sig.c
tests/integration/: test_roundtrip.c
tests/unit/: test_fndsa_quick.c  test_hash.c  test_kem_all.c  test_sig_all.c
(+67 files in other folders)
